Added a <p> to display the current RGB value that is being displayed in the background. changeRgbText function was added to scripts to be called during the function that happens on the button click.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
   <div>
+    <p id="p1">R: <span>255</span> G: <span>255</span> B: <span>255</span></p>
+  </div>
+  <div>
     <button id="btn">Press me!</button>
   </div>
 
