--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <p id="p1">R: <span>255</span> G: <span>255</span> B: <span>255</span></p>
   </div>
   <div>
+    <p id="p2">#FFFFFF</p>
+  </div>
+  <div>
     <button id="btn">Press me!</button>
   </div>
-
 </body>
 </html>
